--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,13 @@
 {
-  "singleQuote": true
+  "endOfLine": "crlf",
+  "bracketSpacing": true,
+  "bracketSameLine": true,
+  "arrowParens": "always",
+  "jsxSingleQuote": true,
+  "printWidth": 70,
+  "semi": true,
+  "tabWidth": 2,
+  "useTabs": false,
+  "singleQuote": true,
+  "trailingComma": "none"
 }
