--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "name": "nx-northwind",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
+  "author": {
+    "name": "Iordanidis Chris"
+  },
+  "description": "Angular app using Nx, RxJs, NgRx, ExpressJS",
   "scripts": {
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js",
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "format": "prettier --write \"apps/**/*.ts\""
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~15.0.0",
+    "@angular/cdk": "^15.0.2",
     "@angular/common": "~15.0.0",
     "@angular/compiler": "~15.0.0",
     "@angular/core": "~15.0.0",
@@ -19,7 +25,12 @@
     "@angular/platform-browser": "~15.0.0",
     "@angular/platform-browser-dynamic": "~15.0.0",
     "@angular/router": "~15.0.0",
-    "@nrwl/angular": "15.3.0",
+    "@ngrx/component-store": "^15.0.0",
+    "@ngrx/effects": "^15.0.0",
+    "@ngrx/entity": "^15.0.0",
+    "@ngrx/router-store": "^15.0.0",
+    "@ngrx/store": "^15.0.0",
+    "express": "^4.18.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -32,17 +43,24 @@
     "@angular/cli": "~15.0.0",
     "@angular/compiler-cli": "~15.0.0",
     "@angular/language-service": "~15.0.0",
+    "@ngrx/schematics": "^15.0.0",
+    "@ngrx/store-devtools": "^15.0.0",
+    "@nrwl/angular": "^15.2.4",
     "@nrwl/cypress": "15.3.0",
     "@nrwl/eslint-plugin-nx": "15.3.0",
+    "@nrwl/express": "15.3.0",
     "@nrwl/jest": "15.3.0",
     "@nrwl/linter": "15.3.0",
+    "@nrwl/node": "15.3.0",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "15.3.0",
+    "@types/express": "4.17.13",
     "@types/jest": "28.1.1",
-    "@types/node": "16.11.7",
+    "@types/node": "18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "cypress": "^11.0.0",
+    "cypress-slow-down": "^1.2.1",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
