--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "@ngrx/entity": "^15.0.0",
     "@ngrx/router-store": "^15.0.0",
     "@ngrx/store": "^15.0.0",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "mysql": "^2.18.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -67,7 +70,9 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "~12.2.3",
+    "morgan": "^1.10.0",
     "nx": "15.3.0",
+    "nyc": "^15.1.0",
     "prettier": "^2.6.2",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
