--- a/apps/api/tsconfig.app.json
+++ b/apps/api/tsconfig.app.json
@@ -3,12 +3,15 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
-    "types": ["node", "express"]
+    "types": ["node", "express"],
+    "allowJs": true
   },
   "exclude": [
     "jest.config.ts",
     "src/**/*.spec.ts",
-    "src/**/*.test.ts"
+    "src/**/*.test.ts",
+    "src/**/*.test.js",
+    "src/**/*.spec.js",
   ],
   "include": ["src/**/*.ts"]
 }
