--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -52,7 +53,7 @@
     "@nrwl/cypress": "15.3.0",
     "@nrwl/eslint-plugin-nx": "15.3.0",
     "@nrwl/express": "15.3.0",
-    "@nrwl/jest": "15.3.0",
+    "@nrwl/jest": "^15.3.0",
     "@nrwl/linter": "15.3.0",
     "@nrwl/node": "15.3.0",
     "@nrwl/nx-cloud": "latest",
@@ -74,6 +75,7 @@
     "nx": "15.3.0",
     "nyc": "^15.1.0",
     "prettier": "^2.6.2",
+    "supertest": "^6.3.3",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2"
