--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "rxjs": "~7.5.0",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
