--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,14 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@nx-northwind/nx-northwind-app/entities": [
+        "libs/nx-northwind-app/entities/src/index.ts"
+      ],
+      "@nx-northwind/nx-northwind-app/services": [
+        "libs/nx-northwind-app/services/src/index.ts"
+      ]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
