--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
-    "format": "prettier --write \"apps/**/*.ts\""
+    "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\""
   },
   "private": true,
   "dependencies": {
