--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "license": "MIT",
   "author": {
-    "name": "Iordanidis Chris"
+    "name": "Iordanidis Chris",
+    "email": "iordanidischr@gmail.com"
   },
   "description": "Angular app using Nx, RxJs, NgRx, ExpressJS",
   "scripts": {
@@ -22,6 +23,7 @@
     "@angular/compiler": "~15.0.0",
     "@angular/core": "~15.0.0",
     "@angular/forms": "~15.0.0",
+    "@angular/material": "^15.1.1",
     "@angular/platform-browser": "~15.0.0",
     "@angular/platform-browser-dynamic": "~15.0.0",
     "@angular/router": "~15.0.0",
