--- a/package.json
+++ b/package.json
@@ -35,10 +35,15 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "downloadjs": "^1.4.7",
     "express": "^4.18.1",
+    "linebreak": "^1.1.0",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
+    "pdfkit": "^0.13.0",
+    "pdfmake": "^0.2.7",
     "rxjs": "~7.5.0",
+    "svg-to-pdfkit": "^0.1.8",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.6.0",
     "tslib": "^2.3.0",
@@ -64,6 +69,7 @@
     "@nrwl/node": "15.3.0",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "15.3.0",
+    "@types/downloadjs": "^1.4.3",
     "@types/express": "4.17.13",
     "@types/jest": "28.1.1",
     "@types/node": "18.7.1",
